1.teacher save module not working 2.cannot save batch without teacher moduele properly work 3.Student not working properly ( Cannot Save ).may be error due to batch unavailablity 4.when duplicate role adding in role/add module error message not working properly 5.timetable module not working.cannot add time slot.not redirecting 6.cannot find attendance module 7.batch-Exam , Exam module not included in my scope

--- a/src/main/resources/templates/employee/addEmployee.html
+++ b/src/main/resources/templates/employee/addEmployee.html
@@ -103,7 +103,7 @@
           <!--Nic-->
           <div class="form-row text-right" >
             <div class="col-md-4" >
-              <label class="control-label" for="nic" >NIC No :</label >
+              <label class="control-label" for="NationalID" >NIC No :</label >
             </div >
             <div class="col-md-8" >
               <input data-th-field="*{nic}" class="form-control" tabindex="6" type="text"
@@ -115,10 +115,10 @@
           </div >
           <!--Gender-->
           <div class="form-row text-right" >
-            <div class="col-md-4" >
+            <div class="col-md-4 text-right" >
               <label class="control-label" for="gender" >Gender :</label >
             </div >
-            <div class="col-md-8" >
+            <div class="col-md-8 text-left" >
               <div class="custom-control custom-checkbox custom-control-inline "
                    data-th-each="genders,index : ${gender}">
                 <input class="custom-control-input gender" required
