--- a/src/main/resources/templates/batch/addBatch.html
+++ b/src/main/resources/templates/batch/addBatch.html
@@ -26,94 +26,124 @@
 
 <div class="container" >
   <form action="/batch/save" data-th-object="${batch}" method="post" >
+    <!--id-->
     <div class="form-group text-right" data-th-if="${addStatus==false}" >
-      <div class="col-md-4" >
+      <div class="col-6" >
         <label data-th-for="${id}" >Id</label >
       </div >
-      <div class="col-md-8" >
+      <div class="col-6" >
         <label >
           <input class="form-control" data-th-field="*{id}" readonly type="text" >
           <input class="form-control" data-th-field="*{liveDead}" readonly type="hidden" >
         </label >
       </div >
     </div >
+    <!--reference-->
     <div class="form-group" data-th-if="${addStatus==false}" >
-      <label class="col-sm-3 control-label" data-th-for="${'code'}" >Batch Reff</label >
-      <div class="col-sm-9" >
+      <label class="col-6 control-label" data-th-for="${'code'}" >Batch Ref</label >
+      <div class="col-6" >
         <input type="text" data-th-field="*{code}" id="batchId" placeholder="Batch ID" class="form-control"
                autofocus readonly >
       </div >
     </div >
-    <div class="form-group" >
-      <label class="col-sm-2 control-label" data-th-for="${'year'}" >Academic Year</label >
-      <div class="col-sm-3" >
-        <select id="year" class="form-control" data-th-field="*{year}" required >
-          <option value="2021" >2021</option >
-          <option value="2022" >2022</option >
-          <option value="2023" >2023</option >
-          <option value="2024" >2024</option >
-          <option value="2025" >2025</option >
-          <option value="2026" >2026</option >
-          <option value="2027" >2027</option >
-          <option value="2028" >2028</option >
-        </select >
-      </div >
-    </div >
-    <div class="form-group" >
-      <label class="col-sm-1 control-label" data-th-for="${'grade'}" >Grade</label >
-      <div class="col-sm-5" >
-        <select id="grade" class="form-control" data-th-field="*{grade}" required >
-          <option value="" >Select the Grade</option >
-          <option data-th-each="grade : ${grades}"
-                  data-th-text="${grade.grade}"
-                  data-th-value="${grade}" ></option >
-        </select >
-      </div >
-    </div >
-    <div class="form-group" >
-      <label data-th-for="${'teacher'}" class="col-sm-3 control-label" >Teacher Name</label >
-      <div class="col-sm-9" >
-        <select id="teacher" class="form-control" data-th-field="*{teacher}" required >
-          <option value="" >Select the Teacher</option >
-          <option data-th-each="teacher : ${teachers}"
-                  data-th-text="${teacher.firstName+'_'+teacher.fee}"
-                  data-th-value="${teacher.id}" ></option >
-        </select >
-      </div >
-    </div >
-    <div class="form-group" >
-      <label data-th-for="${'classDay'}" class="col-sm-3 control-label" >Class Day</label >
-      <div class="col-sm-9" >
-        <select id="classDay" class="form-control" data-th-field="*{classDay}" required >
-          <option value="" >Select Day</option >
-          <option data-th-each="classDay : ${classDays}"
-                  data-th-text="${classDay.classDay}"
-                  data-th-value="${classDay}" ></option >
-        </select >
-      </div >
-    </div >
-    <div class="form-group" >
-      <label data-th-for="${name}" class="col-sm-3 control-label" >Time Period</label >
-      <div class="col-sm-9" >
+    <div class="row">
+      <div class="col-6">
+        <!--academicYear-->
         <div class="form-group" >
-          <label for="startAt" >FROM (opening hours 08:00 to 20:00) :</label >
-          <input class="form-control" id="startAt" data-th-field="*{startAt}" type="time" step="3600" min="08:00"
-                 max="20:00" />
+          <label class="col-6 control-label" data-th-for="${'year'}" >Academic Year</label >
+          <div class="col-6" >
+            <select id="year" class="form-control" data-th-field="*{year}" required >
+              <option value="2021" >2021</option >
+              <option value="2022" >2022</option >
+              <option value="2023" >2023</option >
+              <option value="2024" >2024</option >
+              <option value="2025" >2025</option >
+              <option value="2026" >2026</option >
+              <option value="2027" >2027</option >
+              <option value="2028" >2028</option >
+            </select >
+          </div >
         </div >
+      </div>
+      <div class="col-6">
+        <!--grade-->
         <div class="form-group" >
-          <label for="endAt" >TO (opening hours 08:00 to 20:00) :</label >
-          <input class="form-control" id="endAt" data-th-field="*{endAt}" type="time" step="3600" min="08:00"
-                 max="20:00" />
+          <label class="col-6 control-label" data-th-for="${'grade'}" >Grade</label >
+          <div class="col-6" >
+            <select id="grade" class="form-control" data-th-field="*{grade}" required >
+              <option value="" >Select the Grade</option >
+              <option data-th-each="grade : ${grades}"
+                      data-th-text="${grade.grade}"
+                      data-th-value="${grade}" ></option >
+            </select >
+          </div >
+        </div >
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-6">
+        <!--teacherName-->
+        <div class="form-group" >
+          <label data-th-for="${'teacher'}" class="col-6 control-label" >Teacher Name</label >
+          <div class="col-6" >
+            <select id="teacher" class="form-control" data-th-field="*{teacher}" required >
+              <option value="" >Select the Teacher</option >
+              <option data-th-each="teacher : ${teachers}"
+                      data-th-text="${teacher.firstName+'_'+teacher.fee}"
+                      data-th-value="${teacher.id}" ></option >
+            </select >
+          </div >
+        </div >
+      </div>
+      <div class="col-6">
+        <!--classDay-->
+        <div class="form-group" >
+          <label data-th-for="${'classDay'}" class="col-6 control-label" >Class Day</label >
+          <div class="col-6" >
+            <select id="classDay" class="form-control" data-th-field="*{classDay}" required >
+              <option value="" >Select Day</option >
+              <option data-th-each="classDay : ${classDays}"
+                      data-th-text="${classDay.classDay}"
+                      data-th-value="${classDay}" ></option >
+            </select >
+          </div >
+        </div >
+      </div>
+    </div>
+    <div class="row">
+      <!--opening hours from - to-->
+      <div class="form-group" >
+        <label data-th-for="${name}" class="col-6 control-label" >Time Period</label >
+        <div class="row" >
+          <div class="container">
+            <div class="form-group" >
+              <label for="startAt" >FROM (opening hours 08:00 to 20:00) :</label >
+              <input class="form-control" id="startAt" data-th-field="*{startAt}" type="time" step="3600" min="08:00"
+                     max="20:00" />
+            </div >
+          </div>
+          <div class="container">
+            <div class="form-group" >
+              <label for="endAt" >TO (opening hours 08:00 to 20:00) :</label >
+              <input class="form-control" id="endAt" data-th-field="*{endAt}" type="time" step="3600" min="08:00"
+                     max="20:00" />
+            </div >
+          </div>
         </div >
       </div >
-    </div >
-    <div class="form-group" >
-      <label data-th-for="${name}" class="col-sm-3 control-label" >Batch Name</label >
-      <div class="col-sm-9" >
-        <input type="text" data-th-field="*{name}" id="name" placeholder="Batch Name" class="form-control"
-               autofocus readonly >
+    </div>
+    <div class="row">
+      <!--batchName-->
+      <div class="form-group" >
+        <label data-th-for="${name}" class="container" >Batch Name</label >
+        <div class="container-fluid" >
+          <input type="text" data-th-field="*{name}" id="name" placeholder="Batch Name" class="form-control"
+                 autofocus readonly >
+        </div >
       </div >
-    </div >
+    </div>
+    <!--error-->
     <div class="form-group" >
       <label  data-th-if="${#fields.hasErrors('*')}" data-th-text="'Errors: '" >Errors: </label >
       <ul >
