--- a/src/main/resources/templates/batch/batch.html
+++ b/src/main/resources/templates/batch/batch.html
@@ -23,8 +23,8 @@
     </div>
 </div>
 
-<div class="form-row">
-    <div class="container-fluid">
+<div class="row">
+    <div class="container-lg">
         <table class="table table-striped table-inverse table-responsive" id="myTable">
             <thead class="thead-inverse">
             <tr>
