--- a/src/main/resources/templates/role/role.html
+++ b/src/main/resources/templates/role/role.html
@@ -7,15 +7,15 @@
 <body>
 <nav   data-th-replace="~{fragments/navBar :: navBarFragment}"></nav>
 
-<div class="container-fluid bg-secondary form-Border">
-    <div class="row text-center formManagement border-info">
+<div class="container-fluid form-Border">
+    <div class="row text-center form Management border-info">
         <div class="col">
-            <a class="btn btn-success" href="/role/add">
+            <a class="btn btn-primary" href="/role/add">
                 <i class="fa fa-user-plus" style="font-size: 18px;"></i> &nbsp; New Role </a>
 
         </div>
         <div class="col ">
-            <h4 class="text-info text-center">
+            <h4 class="text-primary text-center">
                 <strong>
                     Role Management
                 </strong>
@@ -25,7 +25,7 @@
         </div>
     </div>
 </div>
-<div class="container-fluid bg-dark formBorder">
+<div class="container-fluid formBorder">
     <div class="offset-2 col-8 col-sm-8 col-md-8" id="roleListPresent"   data-th-if="${not #lists.isEmpty(roles)}">
         <div class="table-responsive">
             <table class="table table-striped table-condensed">
@@ -41,7 +41,7 @@
                     <th   data-th-text="${rowCount.count}"></th>
                     <th   data-th-text="${role.roleName}"></th>
                     <th   data-th-if="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}">
-                        <a id="edit"   data-th-href="${'/role/edit/' + role.id}" class="btn btn-primary btn-sm mr-2 p-2">Edit
+                        <a id="edit"   data-th-href="${'/role/edit/' + role.id}" class="btn btn-success btn-sm mr-2 p-2">Edit
                         </a>
                         &nbsp;
                         <a id="remove"   data-th-href="${'/role/remove/' + role.id}" class="btn btn-danger btn-sm mr-2 p-2"
