1.teacher save module not working 2.cannot save batch without teacher moduele properly work 3.Student not working properly ( Cannot Save ).may be error due to batch unavailablity 4.when duplicate role adding in role/add module error message not working properly 5.timetable module not working.cannot add time slot.not redirecting 6.cannot find attendance module 7.batch-Exam , Exam module not included in my scope
-------------------
1.student (back )
2.batch wala responsiveness
3.employee role module
4.hall (view ) module
5.timeTable error

--- a/src/main/resources/templates/batch/addBatch.html
+++ b/src/main/resources/templates/batch/addBatch.html
@@ -152,7 +152,7 @@
     </div >
     <div class="row container-fluid" >
       <div class="col-sm-2 col-sm-offset-2" >
-        <button type="button" class="btn btn-danger btn-block" >Back</button >
+        <a href="/batch"><button type="button" class="btn btn-danger btn-block" >Back</button ></a>
       </div >
 
       <div class="col-sm-2 col-sm-offset-2" >
