--- a/src/main/resources/templates/student/student.html
+++ b/src/main/resources/templates/student/student.html
@@ -29,7 +29,6 @@
         <th >Registration ID</th >
         <th >First Name</th >
         <th >Gender</th >
-        <th >City</th >
         <th >School</th >
         <th >Guardian</th >
         <th >Mobile Number</th >
@@ -43,8 +42,7 @@
         <td data-th-text="${student.regNo}" ></td >
         <td data-th-text="${student.firstName}" ></td >
         <td data-th-text="${student.gender}" ></td >
-        <td data-th-text="${student.city}" ></td >
-        <td data-th-text="${student.school}" ></td >
+        <td data-th-text="${student.school.name}" ></td >
         <td data-th-text="${student.guardian}" ></td >
         <td data-th-text="${student.mobile}" ></td >
         <td data-th-text="${student.home}" ></td >
