--- a/src/main/resources/templates/teacher/addTeacher.html
+++ b/src/main/resources/templates/teacher/addTeacher.html
@@ -28,6 +28,7 @@
             <label class="col-sm-3 control-label" data-th-for="${id}">Index</label>
             <div class="col-sm-9">
                 <input type="text" readonly data-th-field="*{id}" id="id" placeholder="Index" class="form-control" autofocus>
+                <input type="text" data-th-field="*{liveDead}" hidden>
             </div>
         </div>
         <!--registrationId-->
@@ -158,7 +159,7 @@
         </div>
         <div class="row align-content-center">
             <div class="col-sm-2 col-sm-offset-2">
-                <button type="link" class="btn btn-danger btn-block">Back</button>
+                <a href="/teacher"><button type="button" class="btn btn-danger btn-block">Back</button></a>
             </div>
 
             <div class="col-sm-2 col-sm-offset-2">
