--- a/src/main/resources/templates/timeTable/timeTable.html
+++ b/src/main/resources/templates/timeTable/timeTable.html
@@ -21,7 +21,7 @@
     <div class="col-4"></div>
 </div>
 
-<div class="container-fluid">
+<div class="container">
     <table class="table table-striped table-inverse table-responsive" data-th-fragment="timeTable" id="myTable">
         <thead class="thead-inverse">
         <tr>
