--- a/src/main/resources/templates/student/student.html
+++ b/src/main/resources/templates/student/student.html
@@ -20,7 +20,7 @@
 </div >
 
 <div class="container-fluid row" >
-  <div class="col" >
+  <div class="col" data-th-fragment="studentsFragment" >
     <table class="table table-striped table-inverse table-responsive container" id="myTable" >
       <thead class="thead-inverse" >
       <tr >
