--- a/src/main/resources/templates/timeTable/timeTable-detail.html
+++ b/src/main/resources/templates/timeTable/timeTable-detail.html
@@ -87,58 +87,7 @@
     </div >
   </div >
   <!--student list -->
-  <div class="container-fluid row" >
-    <div class="col" >
-      <table class="table table-striped table-inverse table-responsive container" id="myTable" >
-        <thead class="thead-inverse" >
-        <tr >
-          <th >Index</th >
-          <th >Registration ID</th >
-          <th >First Name</th >
-          <th >Gender</th >
-          <th >School</th >
-          <th >Guardian</th >
-          <th >Mobile Number</th >
-          <th >Home Number</th >
-          <th >Modify</th >
-        </tr >
-        </thead >
-        <tbody >
-        <tr data-th-each="student, index : ${students}" >
-          <td data-th-text="${index.count}" ></td >
-          <td data-th-text="${student.regNo}" ></td >
-          <td data-th-text="${student.firstName}" ></td >
-          <td data-th-text="${student.gender}" ></td >
-          <td data-th-text="${student.school.name}" ></td >
-          <td data-th-text="${student.guardian}" ></td >
-          <td data-th-text="${student.mobile}" ></td >
-          <td data-th-text="${student.home}" ></td >
-          <td data-th-if="${!studentRemoveBatch}" >
-            <a data-th-href="${'/student/view/'+ student.id}" >
-              <button class="btn btn-info" >View</button >
-            </a >
-            <a data-th-href="${'/student/edit/'+ student.id}" >
-              <button class="btn btn-success" >Update</button >
-            </a >
-            <a data-th-href="${'/student/delete/'+ student.id}" >
-              <button class="btn btn-danger" >Delete</button >
-            </a >
-          </td >
-          <td data-th-if="${studentRemoveBatch}" >
-            <a data-th-href="${'/student/view/'+ student.id}" >
-              <button class="btn btn-info" >View</button >
-            </a >
-            <form action="/batchStudent/removeBatch" method="post">
-              <input type="hidden" name="batch" data-th-value="${batchDetail.id}" >
-              <input type="hidden" name="student" data-th-value="${student.id}" >
-              <button type="submit" class="btn btn-danger" >Remove</button >
-            </form >
-          </td >
-        </tr >
-        </tbody >
-      </table >
-    </div >
-  </div >
+  <div data-th-replace="~{student/student :: studentsFragment}" ></div>
 </div >
 <!--Button-->
 <div class="form-batch col-md-12 col-sm-12 text-center flex-column " >
