Attendance add issue was resolved

--- a/src/main/resources/templates/timeTableStudentAttendance/addTimeTableStudentAttendance.html
+++ b/src/main/resources/templates/timeTableStudentAttendance/addTimeTableStudentAttendance.html
@@ -57,7 +57,7 @@
                      data-th-id="${indexOne.index}+${attendanceStatus}+{index.index}" type="radio"
                      data-th-checked="${attendanceStatus==timeTableStudentAttendance.attendanceStatus}" />
               <label class="custom-control-label"
-                     data-th-for="${indexOne.index}+${attendanceStatus}+{index.index}"
+                     data-th-for="${indexOne.index}+${attendanceStatus}+${index.index}"
                      data-th-text="${attendanceStatus.attendanceStatus}" > radio
               </label >
             </span >
