--- a/src/main/resources/templates/timeTableStudentAttendance/addTimeTableStudentAttendance.html
+++ b/src/main/resources/templates/timeTableStudentAttendance/addTimeTableStudentAttendance.html
@@ -54,7 +54,7 @@
               <input class="custom-control-input gender" required
                      data-th-name="${'timeTableStudentAttendances[__${index.index}__].attendanceStatus'}"
                      data-th-value="${attendanceStatus}"
-                     data-th-id="${indexOne.index}+${attendanceStatus}+{index.index}" type="radio"
+                     data-th-id="${indexOne.index}+${attendanceStatus}+${index.index}" type="radio"
                      data-th-checked="${attendanceStatus==timeTableStudentAttendance.attendanceStatus}" />
               <label class="custom-control-label"
                      data-th-for="${indexOne.index}+${attendanceStatus}+${index.index}"
