role issue was resolved

--- a/src/main/resources/templates/login/passwordChange.html
+++ b/src/main/resources/templates/login/passwordChange.html
@@ -24,7 +24,7 @@
                         <div class="col-md-6 input-group">
                             <input type="password" data-th-field="*{oldPassword}" id="opsw" placeholder="Enter Old Password Here"
                                    class="form-control pwd" name="opsw" required/>
-                            <span class="error" id="opswError" th:errors="*{oldPassword}"   data-th-if="${#fields.hasErrors('oldPassword')}">Current Password is error</span>
+                            <span class="error" id="opswError" data-th-errors="*{oldPassword}"   data-th-if="${#fields.hasErrors('oldPassword')}">Current Password is error</span>
 
                         </div>
                     </div>
@@ -36,7 +36,7 @@
                         <div class="col-md-6">
                             <input type="password" data-th-field="*{newPassword}" id="npsw" placeholder="Enter New Password Here"
                                    class="form-control pwd" name="npsw" required/>
-                            <span class="error" th:errors="*{newPassword}"   data-th-if="${#fields.hasErrors('newPassword')}" id="npswError">Error New Password</span>
+                            <span class="error" data-th-errors="*{newPassword}"   data-th-if="${#fields.hasErrors('newPassword')}" id="npswError">Error New Password</span>
                             <div class="text-right">
                                 <span id="resultOne"></span>
                             </div>
@@ -50,7 +50,7 @@
                         <div class="col-md-6">
                             <input type="password" data-th-field="*{newPasswordConform}" id="nrepsw" placeholder="Re Enter New Password Here"
                                    class="form-control pwd" name="nrepsw" required/>
-                            <span class="error" id="nrepswError" th:errors="*{newPasswordConform}"   data-th-if="${#fields.hasErrors('newPasswordConform')}">Error New Password</span>
+                            <span class="error" id="nrepswError" data-th-errors="*{newPasswordConform}"   data-th-if="${#fields.hasErrors('newPasswordConform')}">Error New Password</span>
                             <div class="text-right">
                                 <span id="resultTwo"></span>
                             </div>
